@@ -1,2 +1,0 @@
-x = 1
-print(x)
